ACOMODE UNOS LINKS!!!

--- a/src/app/pages/articulo1/articulo1.page.html
+++ b/src/app/pages/articulo1/articulo1.page.html
@@ -32,7 +32,7 @@
     <ion-card-content>
       <p>es un reloj que se puede hablar a traves de el xd...</p>
       <p>Precio: $25.00</p>
-      <ion-button expand="full" color="primary">Agregar al Carrito</ion-button>
+      <ion-button expand="full" [routerLink]="['/carrito']" color="primary">Agregar al Carrito</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
