--- a/src/app/pages/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio-sesion/inicio-sesion.page.html
@@ -48,6 +48,6 @@
     <ion-label position="floating">Contraseña:</ion-label>
     <ion-input type="password" placeholder="**************************"></ion-input><br>
     <h1>¿Aun no tiene una cuenta?</h1><a [routerLink]="['/registro']">Registrese</a><br>
-    <ion-button color="tertiary"  [routerLink]="['/inicio']" >iniciar sesión</ion-button>
+    <ion-button color="tertiary"  [routerLink]="['/tienda']" >iniciar sesión</ion-button>
   </ion-list>
 </ion-content>
