--- a/src/app/pages/carrito/carrito.page.html
+++ b/src/app/pages/carrito/carrito.page.html
@@ -38,17 +38,40 @@
       <br>
       <ion-card-content>
         <form id="registration-form">
-
-          <ion-card>
-            <ion-img class="img-container"
-              src="https://w7.pngwing.com/pngs/440/569/png-transparent-smartwatch-subscriber-identity-module-android-touchscreen-smart-watches-gadget-electronics-watch-accessory.png"></ion-img>
-            <ion-card-header>
-              <ion-card-title>Reloj inteligente</ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              <h2>Precio: $25.000</h2>
-            </ion-card-content>
-          </ion-card>
+          <ion-row >
+            <ion-col size="6">
+              <ion-card size="3">
+                <ion-img src="assets/apple1.jpg" alt="Producto"></ion-img>
+                <ion-card-header>
+                  <ion-card-title>Apple watch</ion-card-title>
+                  <p class="card-text">Precio: $23.000</p>
+                  <!--Botones para la cantidad de los productos-->
+                  <ion-button shape="round" color="success">+</ion-button>
+                  <ion-button shape="round" color="success">-</ion-button>
+                  <ion-input type="" required readonly class="readonly-input" value="Cantidad:1"></ion-input>
+                </ion-card-header>
+                <ion-card-content>
+                  <ion-button color="danger">Eliminar</ion-button>
+                </ion-card-content>
+              </ion-card>
+            </ion-col>
+            
+            <ion-col size="6">
+              <ion-card size="3">
+                <ion-img src="assets/s1.jpg" alt="Producto"></ion-img>
+                <ion-card-header>
+                  <ion-card-title>Samsung watch</ion-card-title>
+                  <p class="card-text">Precio: $85.000</p>
+                  <ion-button shape="round" color="success">+</ion-button>
+                  <ion-button shape="round" color="success">-</ion-button>
+                  <ion-input type="" required readonly class="readonly-input" value="Cantidad:1"></ion-input>
+                </ion-card-header>
+                <ion-card-content>
+                  <ion-button color="danger">Eliminar</ion-button>
+                </ion-card-content>
+              </ion-card>
+            </ion-col>
+          </ion-row>
 
           <br>
           <ion-card>
@@ -75,7 +98,7 @@
           <ion-card>
             <h1>Total: $25.000</h1>
           </ion-card>
-          
+
 
           <ion-button expand="full" type="submit">Comprar</ion-button>
         </form>
