--- a/src/app/pages/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio-sesion/inicio-sesion.page.html
@@ -1,10 +1,38 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>inicio de sesion</ion-title>
-  </ion-toolbar>
 </ion-header>
 
 <style>
+  ion-card-title {
+    font-family: 'arial', cursive;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+
+  }
+
+  .ion-card-content {
+    font-family: 'arial', cursive;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+
+  }
+
+  .container {
+    display: flex;
+    justify-content: center;
+    /* Alineación horizontal al centro */
+    align-items: center;
+    /* Alineación vertical al centro */
+    height: 95vh;
+    /* Opcional: ajusta la altura del contenedor al 100% del viewport */
+  }
+
+  /*este es el fondo*/
+  ion-content {
+    --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+  }
+
   .circulo {
     width: 150px;
     height: 150px;
@@ -27,27 +55,55 @@
     border-radius: 50%;
     /* Mantiene la imagen en forma de círculo */
   }
-  </style>
+</style>
 
-  <ion-content [fullscreen]="true">
-<!--ESTO ES DE LA IMAGEN EN EL CIRCULO
+<ion-content [fullscreen]="true">
+  <!--ESTO ES DE LA IMAGEN EN EL CIRCULO
   <div class="circulo">
     <img class="imagen-circular"
       src="https://w7.pngwing.com/pngs/741/68/png-transparent-user-computer-icons-user-miscellaneous-cdr-rectangle-thumbnail.png"
       alt="NO HAY">
-  </div>-->
-  <!--titulo-->
+  </div>
+  titulo
   <ion-title style=" font-size: 50px; text-align: center;">INICIO DE SESION:</ion-title>
-  <!--correo-->
+  correo
   <ion-list style="align-content: center; width: fit-content;">
     <ion-label>Correo electrónico:</ion-label>
     <ion-input type="email"  placeholder="juanito.perez@gmail.com"></ion-input>
   </ion-list>
-  <!--contraseña-->
+  contraseña
   <ion-list style=" width: fit-content; align-content: center; justify-content: center;">
     <ion-label position="floating">Contraseña:</ion-label>
     <ion-input type="password" placeholder="**************************"></ion-input><br>
     <h1>¿Aun no tiene una cuenta?</h1><a [routerLink]="['/registro']">Registrese</a><br>
     <ion-button color="tertiary"  [routerLink]="['/tienda']" >iniciar sesión</ion-button>
-  </ion-list>
+  </ion-list>-->
+
+  <div class="container">
+    <ion-card class="ion-text-center">
+      <ion-card-header>
+        <ion-card-title>Inicio de sesión</ion-card-title>
+      </ion-card-header>
+      <ion-card-content class="ion-card-content">
+        <form id="registration-form">
+          <!--Aqui tendriamos que mostrar la pregunta de seguridad que el usuario registro-->
+          <ion-item>
+            <ion-label position="floating">Correo electrónico:</ion-label>
+            <ion-input type="email" placeholder="juanito.perez@gmail.com" required></ion-input>
+          </ion-item>
+
+          <ion-item style="align-content: center; width: fit-content;">
+            <ion-label position="floating">Contraseña:</ion-label>
+            <ion-input type="password" placeholder="********************" required></ion-input>
+          </ion-item>
+
+          <p1 [routerLink]="['/registro']">¿Aún no tiene una cuenta? Registrate aquí</p1>
+          <br><br>
+          <br>
+          <ion-button expand="full" [routerLink]="['/tienda']" type="submit">Iniciar sesión</ion-button>
+        </form>
+      </ion-card-content>
+
+    </ion-card>
+  </div>
 </ion-content>
