--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -31,7 +31,7 @@
 
 <ion-content class="fondo" [fullscreen]="true">
   <div class="container">
-    <ion-card>
+    <ion-card class="ion-text-center">
       <ion-card-header>
         <ion-card-title>Registro</ion-card-title>
       </ion-card-header>
@@ -85,8 +85,8 @@
           </ion-item>
 
           <ion-button expand="full" type="submit">Registrarse</ion-button>
-          <h1>¿Ya tienes una cuenta?</h1><a [routerLink]="['/inicio-sesion']">Registrese</a><br>
-          <a [routerLink]="['/recuperar-contrasena']">Recuperar contraseña</a>
+          <p1 [routerLink]="['/inicio-sesion']"> ¿Ya tienes una cuenta? Inicia sesión aquí</p1><br>
+          
         </form>
         </ion-card-content>
     </ion-card>
