--- a/src/app/pages/menu-admin/menu-admin.page.html
+++ b/src/app/pages/menu-admin/menu-admin.page.html
@@ -1,14 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>notFound</ion-title>
+    <ion-title>menu-admin</ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">notFound</ion-title>
+      <ion-title size="large">menu-admin</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
-
-
