--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,57 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="menu-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Hola!!</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-item>
+        <ion-label>Inicio</ion-label>
+      </ion-item>
+      <!-- SECCION DE LOS RELOJES -->
+      <ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="auto">
+              <ion-icon name="time-outline"></ion-icon>
+            </ion-col>
+            <ion-col>
+              <ion-label>Reloj analógico.</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+      <ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="auto">
+              <ion-icon name="watch-outline"></ion-icon>
+            </ion-col>
+            <ion-col>
+              <ion-label>Reloj digital.</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+        
+      </ion-item>
+      <ion-item>
+        <ion-label>Reloj Smartwatch</ion-label>
+      </ion-item>
+      <!-- SECCION DE LOS AUDIFONOS -->
+      <ion-item>
+        <ion-label>Audifonos con bluetooth</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Audifonos Inalambricos</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Audifonos Gamers</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Audifonos Deportivos</ion-label>
+      </ion-item>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="menu-content"></ion-router-outlet>
 </ion-app>
