--- a/src/app/pages/reloj-ana/reloj-ana.page.html
+++ b/src/app/pages/reloj-ana/reloj-ana.page.html
@@ -1,14 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>notFound</ion-title>
+    <ion-title>relojAna</ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">notFound</ion-title>
+      <ion-title size="large">relojAna</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
-
-
