--- a/src/app/pages/tienda/tienda.page.html
+++ b/src/app/pages/tienda/tienda.page.html
@@ -43,7 +43,7 @@
 
   <ion-grid>
     <ion-row>
-      <a href="/src/app/pages/articulo1/articulo1.page.html">
+      <p [routerLink]="['/articulo1']">
         <ion-card>
           <ion-img class="img-container" src="assets/s1.jpg"></ion-img>
           <ion-card-header>
@@ -54,7 +54,7 @@
             <ion-button expand="full" color="primary" [routerLink]="['/articulo1']">Visualizar</ion-button>
           </ion-card-content>
         </ion-card>
-      </a>
+      </p>
       <ion-card>
         <ion-img class="img-container"
           src="https://w7.pngwing.com/pngs/440/569/png-transparent-smartwatch-subscriber-identity-module-android-touchscreen-smart-watches-gadget-electronics-watch-accessory.png"></ion-img>
