Admin listo, falta validaciones

--- a/src/app/pages/editar-p-admin/editar-p-admin.page.html
+++ b/src/app/pages/editar-p-admin/editar-p-admin.page.html
@@ -33,7 +33,7 @@
   <div class="container">
     <ion-card>
       <ion-card-header>
-        <ion-card-title>Producto:</ion-card-title>
+        <ion-card-title>Editar producto:</ion-card-title>
       </ion-card-header>
       <br>
       <ion-card-content>
