--- a/src/app/pages/menu-admin/menu-admin.page.html
+++ b/src/app/pages/menu-admin/menu-admin.page.html
@@ -38,25 +38,15 @@
   <div class="container">
     <ion-card class="ion-text-center">
       <ion-card-header>
-        <ion-card-title>Productos</ion-card-title>
+        <ion-card-title>Bienvenido Administrador</ion-card-title>
       </ion-card-header>
-      <ion-card-content >
-        <form id="registration-form">
-          <ion-item>Desplegar lista para ver los productos</ion-item>
-          <ion-item>
-            <ion-item>
-              <ion-label position="floating">Productos</ion-label>
-              <ion-select>
-                <ion-select-option >Samsung watch series 3</ion-select-option>
-                <ion-select-option >Apple wacth series 5</ion-select-option>
-                <ion-select-option >Huawei watch 10°generación</ion-select-option>
-              </ion-select>
-            </ion-item>
-          </ion-item>
-          <ion-item>Que desea hacer con este producto</ion-item> 
-          <ion-button expand="full" [routerLink]="['/menu-admin']" type="submit">Editar</ion-button>
-          <ion-button expand="full" [routerLink]="['/tienda']" type="submit">Eliminar</ion-button>
-
+      <ion-card-content>
+        <form>
+          <ion-item>¿Que desea hacer?</ion-item>
+          
+          <ion-button expand="full" [routerLink]="['/productoadmin']" type="submit">Ver productos</ion-button>
+          <ion-button expand="full" [routerLink]="['/tienda']" type="submit">Ver api</ion-button>
+          <ion-button expand="full" [routerLink]="['/tienda']" type="submit">Cerrar sesión</ion-button>
         </form>
       </ion-card-content>
 
