--- a/src/app/pages/productoadmin/productoadmin.page.html
+++ b/src/app/pages/productoadmin/productoadmin.page.html
@@ -1,13 +1,66 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>productoadmin</ion-title>
-  </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">productoadmin</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<style>
+  ion-card-title {
+    font-family: 'arial', cursive;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+
+  }
+
+  .ion-card-content {
+    font-family: 'arial', cursive;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+
+  }
+
+  .container {
+    display: flex;
+    justify-content: center;
+    /* Alineación horizontal al centro */
+    align-items: center;
+    /* Alineación vertical al centro */
+    height: 95vh;
+    /* Opcional: ajusta la altura del contenedor al 100% del viewport */
+  }
+
+  /*este es el fondo*/
+  ion-content {
+    --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+  }
+</style>
+
+<ion-content>
+  <div class="container">
+    <ion-card class="ion-text-center">
+      <ion-card-header>
+        <ion-card-title>Productos</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <form id="registration-form">
+          <ion-item>¿Desea agregar un nuevo producto?</ion-item>
+          <ion-button expand="full" [routerLink]="['/agregar-p-admin']" type="submit">Agregar nuevo producto</ion-button>
+          <br>
+          <br>
+          <ion-item>
+            <ion-label position="floating">Productos de la tienda</ion-label>
+            <ion-select>
+              <ion-select-option>Samsung watch series 3</ion-select-option>
+              <ion-select-option>Apple wacth series 5</ion-select-option>
+              <ion-select-option>Huawei watch 10°generación</ion-select-option>
+            </ion-select>
+          </ion-item>
+          <ion-item>Que desea hacer con este producto</ion-item>
+          <ion-button expand="full" [routerLink]="['/editar-p-admin']" type="submit">Editar</ion-button>
+          <ion-button expand="full" [routerLink]="['/tienda']" type="submit">Eliminar</ion-button>
+
+        </form>
+      </ion-card-content>
+
+    </ion-card>
+  </div>
 </ion-content>
