--- a/src/app/pages/editar-p-admin/editar-p-admin.page.html
+++ b/src/app/pages/editar-p-admin/editar-p-admin.page.html
@@ -44,21 +44,40 @@
             <ion-input type="text" name="id" required readonly class="readonly-input"></ion-input>
           </ion-item>
           <!--El required es para que solo se pueda ver y no cambiar el campo que ya esta escrito-->
+          <!--Validación para nombre del producto-->
           <ion-item>
             <ion-label position="floating">Nombre para el producto: </ion-label>
-            <ion-input type="text" name="nombreP"  ></ion-input>
+            <ion-input type="text" name="nombreP" minlength="3" maxlength="15" required [(ngModel)]="nombrePValue"
+              #nombrePModel="ngModel">
+            </ion-input>
           </ion-item>
-          
+          <div class="error-message" *ngIf="nombrePModel.invalid && (nombrePModel.dirty || nombrePModel.touched)">
+            <p *ngIf="nombrePModel.errors?.['required']">El nombre del producto es obligatorio.</p>
+            <p *ngIf="nombrePModel.errors?.['minlength']">El nombre debe tener al menos 3 caracteres.</p>
+            <p *ngIf="nombrePModel.errors?.['maxlength']">El nombre no debe exceder los 15 caracteres.</p>
+          </div>
+
 
           <ion-item>
-            <ion-label position="floating" onlyread >Descripción del producto</ion-label>
-            <ion-input type="text" name="descripcion" ></ion-input>
+            <ion-label position="floating" onlyread>Descripción del producto</ion-label>
+            <ion-input type="text" name="descripcionP" minlength="3" maxlength="50" required [(ngModel)]="descripcionPValue"
+            #descripcionPModel="ngModel">
+          </ion-input>
           </ion-item>
+          <div class="error-message" *ngIf="descripcionPModel.invalid && (descripcionPModel.dirty || descripcionPModel.touched)">
+            <p *ngIf="descripcionPModel.errors?.['required']">La descripcion del producto es obligatorio.</p>
+            <p *ngIf="descripcionPModel.errors?.['minlength']">La descripcion debe tener al menos 3 caracteres.</p>
+            <p *ngIf="descripcionPModel.errors?.['maxlength']">La descripcion no debe exceder los 15 caracteres.</p>
+          </div>
 
           <ion-item>
-            <ion-label position="floating" onlyread >Precio:</ion-label>
-            <ion-input type="text" name="precio" ></ion-input>
+            <ion-label position="floating">Precio:</ion-label>
+            <ion-input type="number" name="precioP" min="1000" required [(ngModel)]="precioPValue"
+            #precioPModel="ngModel"></ion-input>
           </ion-item>
+          <div class="error-message" *ngIf="precioPModel.invalid && (precioPModel.dirty || precioPModel.touched)">
+            <p *ngIf="precioPModel.errors?.['required']">El precio del producto es obligatorio.</p>
+          </div>
 
           <ion-item>
             <ion-label position="floating">Categoria para el producto</ion-label>
@@ -74,9 +93,16 @@
           <ion-item>
             <ion-label position="floating">Imagen(es) del producto</ion-label>
             <br>
-            <ion-input type="file" name="imagen" required></ion-input>
+            <ion-input type="file" name="imagenP" required [(ngModel)]="imagenPValue"
+            #imagenPModel="ngModel"></ion-input>
           </ion-item>
+          <div class="error-message" *ngIf="imagenPModel.invalid && (imagenPModel.dirty ||imagenPModel.touched)">
+            <p *ngIf="imagenPModel.errors?.['required']">La foto del producto es obligatorio.</p>
+          </div>
           
+          <ion-button expand="full" [routerLink]="['/menu-admin']" type="submit" [disabled]=
+          "!nombrePModel.valid || !descripcionPModel.valid || !precioPModel.valid ||!imagenPModel.valid ">
+          Guardar</ion-button>
   
         </form>
         </ion-card-content>
