Pafinas de relojes hechas, y unas por alli

--- a/src/app/pages/relojdig/relojdig.page.html
+++ b/src/app/pages/relojdig/relojdig.page.html
@@ -40,13 +40,13 @@
 <ion-content [fullscreen]="true">
   
   <ion-grid>
-    <ion-title>Relojes Analógicos</ion-title>
+    <ion-title>Relojes Digitales</ion-title>
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <ion-card>
-        <ion-img src="assets/r1.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/rd1.jpeg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico azul <br> metálico</ion-card-title>
+          <ion-card-title>Reloj Digital <br> verde</ion-card-title>
           <ion-card-content>
             <p>$22.000</p>
           </ion-card-content>
@@ -54,9 +54,9 @@
       </ion-card>
       <!--SEGUNDO PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/r2.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/rd2.jpeg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico azul <br> con toques verdes</ion-card-title>
+          <ion-card-title>Reloj Digital<br>negro con borde azul</ion-card-title>
           <ion-card-content>
             <p>$105.000</p>
           </ion-card-content>
@@ -64,9 +64,9 @@
       </ion-card>
       <!--TERCER PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/r3.webp" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/rd3.jpeg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico Negro <br>con toques azules</ion-card-title>
+          <ion-card-title>Reloj Digital<br>negro</ion-card-title>
           <ion-card-content>
             <p>$50.000</p>
           </ion-card-content>
@@ -80,9 +80,9 @@
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <ion-card>
-        <ion-img src="assets/r4.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/rd4.jpeg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico negro <br> fondo azul</ion-card-title>
+          <ion-card-title>Reloj Digital<br>Gris</ion-card-title>
           <ion-card-content>
             <p>$75.000</p>
           </ion-card-content>
@@ -90,9 +90,9 @@
       </ion-card>
       <!--SEGUNDO PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/r5.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/rd5.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico negro <br> fondo azul</ion-card-title>
+          <ion-card-title>Reloj Digital<br>negro</ion-card-title>
           <ion-card-content>
             <p>$35.000</p>
           </ion-card-content>
@@ -100,9 +100,9 @@
       </ion-card>
       <!--TERCER PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/r6.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/rd6.jpeg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico negro <br> fondo azul</ion-card-title>
+          <ion-card-title>Reloj Digital<br>negro con azul</ion-card-title>
           <ion-card-content>
             <p>$55.000</p>
           </ion-card-content>
