--- a/src/app/pages/tienda/tienda.page.html
+++ b/src/app/pages/tienda/tienda.page.html
@@ -45,19 +45,32 @@
     <ion-row>
       <p [routerLink]="['/articulo1']">
         <ion-card>
-          <ion-img class="img-container" src="assets/s1.jpg"></ion-img>
+          <ion-img class="img-container" src="assets/a1.jpeg"></ion-img>
           <ion-card-header>
             <ion-card-title>Reloj inteligente</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <p>Precio: $25.00</p>
-            <ion-button expand="full" color="primary" [routerLink]="['/articulo1']">Visualizar</ion-button>
           </ion-card-content>
         </ion-card>
       </p>
       <ion-card>
-        <ion-img class="img-container"
-          src="https://w7.pngwing.com/pngs/440/569/png-transparent-smartwatch-subscriber-identity-module-android-touchscreen-smart-watches-gadget-electronics-watch-accessory.png"></ion-img>
+        <ion-img class="img-container" src="assets/r1.jpeg"></ion-img>
+        <ion-card-header>
+          <ion-card-title>Reloj inteligente</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <p>Precio: $25.00</p>
+          <ion-button expand="full" color="primary" [routerLink]="['/articulo1']">Visualizar</ion-button>
+        </ion-card-content>
+      </ion-card>
+    </ion-row>
+  </ion-grid>
+  <!---->
+  <ion-grid>
+    <ion-row>
+      <ion-card>
+        <ion-img class="img-container" src="assets/r1.jpeg"></ion-img>
         <ion-card-header>
           <ion-card-title>Reloj inteligente</ion-card-title>
         </ion-card-header>
