--- a/src/app/pages/audiina/audiina.page.html
+++ b/src/app/pages/audiina/audiina.page.html
@@ -40,13 +40,13 @@
 <ion-content [fullscreen]="true">
   
   <ion-grid>
-    <ion-title>Relojes Analógicos</ion-title>
+    <ion-title>Audífonos Inalámbricos</ion-title>
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <ion-card>
-        <ion-img src="assets/r1.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/a1.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico azul <br> metálico</ion-card-title>
+          <ion-card-title>Audífonos Bluetooth<br>morados</ion-card-title>
           <ion-card-content>
             <p>$22.000</p>
           </ion-card-content>
@@ -54,9 +54,9 @@
       </ion-card>
       <!--SEGUNDO PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/r2.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/a2.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico azul <br> con toques verdes</ion-card-title>
+          <ion-card-title>Audífonos Bluetooth<br>negros</ion-card-title>
           <ion-card-content>
             <p>$105.000</p>
           </ion-card-content>
@@ -64,9 +64,9 @@
       </ion-card>
       <!--TERCER PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/r3.webp" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/a3.webp" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico Negro <br>con toques azules</ion-card-title>
+          <ion-card-title>Audífonos Bluetooth<br>rojos</ion-card-title>
           <ion-card-content>
             <p>$50.000</p>
           </ion-card-content>
@@ -80,9 +80,9 @@
     <!--PRIMER PRODUCTO-->
     <ion-row>
       <ion-card>
-        <ion-img src="assets/r4.jpeg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/a4.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico negro <br> fondo azul</ion-card-title>
+          <ion-card-title>Audífonos Bluetooth<br>azules</ion-card-title>
           <ion-card-content>
             <p>$75.000</p>
           </ion-card-content>
@@ -90,9 +90,9 @@
       </ion-card>
       <!--SEGUNDO PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/r5.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/a5.webp" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico negro <br> fondo azul</ion-card-title>
+          <ion-card-title>Audífonos Bluetooth<br>blancos</ion-card-title>
           <ion-card-content>
             <p>$35.000</p>
           </ion-card-content>
@@ -100,9 +100,9 @@
       </ion-card>
       <!--TERCER PRODUCTO-->
       <ion-card>
-        <ion-img src="assets/r6.jpg" alt="aqui habia una imagen"></ion-img>
+        <ion-img src="assets/a6.jpg" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title>Reloj Analógico negro <br> fondo azul</ion-card-title>
+          <ion-card-title>Reloj Analógico negro <br>verdes</ion-card-title>
           <ion-card-content>
             <p>$55.000</p>
           </ion-card-content>
