--- a/src/app/pages/relojsma/relojsma.page.html
+++ b/src/app/pages/relojsma/relojsma.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>paginaerror</ion-title>
+    <ion-title>relojsma</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">paginaerror</ion-title>
+      <ion-title size="large">relojsma</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
